# radmin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_add_user_fields.sql  003_create_settings.sql  004_create_files.sql  005_create_dict.sql  006_create_operation_logs.sql  007_create_notifications.sql  008_dict_item_unique_and_type_delete_guard.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/handler/: auth.rs  dict.rs  file.rs  mod.rs  notification.rs  operation_log.rs  setting.rs  user.rs  user_admin.rs
backend/src/middleware/: audit.rs  cors.rs  jwt.rs  mod.rs  role.rs
backend/src/model/: dict.rs  file.rs  mod.rs  notification.rs  operation_log.rs  setting.rs  user.rs
backend/src/router/: admin.rs  auth.rs  dict.rs  file.rs  mod.rs  notification.rs  setting.rs  user.rs
backend/src/service/: auth.rs  dict.rs  file.rs  mod.rs  notification.rs  operation_log.rs  seed.rs  setting.rs  user_admin.rs
documents/: admin_usability_refactor_design.md  cleanup_release_design.md  dict_lifecycle_design.md  docker_registry_prefix_design.md  file_library_design.md  lightweight_scaffold_refactor_design.md  local_first_dev_and_options_usage_design.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: index.css  (+1 more)
plans/: 2026-05-03-admin-usability-refactor-plan.md  2026-05-03-cleanup-release-plan.md  2026-05-03-dict-lifecycle-plan.md  2026-05-03-docker-registry-prefix-plan.md  (+3 more)
(+53 files in other folders)
